--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,32 +1,43 @@
+body{
+    background-image: url(../IMG/moroccan-flower.png);
+    margin: 0;
+    
+}
 .Name_of_page{
     background-color: black;
     color: white;
-    margin: 10px;
+    margin: 0px;
     padding: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
+    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
 }
 
 p {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px 80px;
     padding: 15px 5px;
     border: 5px black solid;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
     
 }
 
 .HTML_explaining{
-    background-color: black;
     color: white;
-    margin: 10px;
+    background-color: black;
+    text-align: center;
+    border: 5px black solid;
+    border-radius: 150px;
+    margin: 10px 720px;
     padding: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
 }
 
 .CodeHTML{
     border: 5px black solid;
-    margin-left: 10px;
-    
+    margin: 10px 80px;
+}
+
+.Main_text{
+    text-decoration: underline 3px;
+    text-underline-offset: 5px;
 }
