--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,43 +1,38 @@
 body{
-    background-image: url(../IMG/moroccan-flower.png);
-    margin: 0;
-    
+    font-family:Arial, Helvetica, sans-serif;
 }
-.Name_of_page{
-    background-color: black;
+
+.para,
+.small-para {
+    color: hsl(0, 0%, 0%);
+    font-weight: 800;
+    font-size: 22px;
+}
+
+.small-para {
+    font-size: 14px;
+  }
+
+.button {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+  }
+
+.confirm {
+    background-color: green;
     color: white;
-    margin: 0px;
-    padding: 30px;
-    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
+    font-weight: bold;
+} 
+
+.text {
+    color: rgb(0, 0, 0);
+    font-size: 22px;
+    font-weight: 100;
 }
 
-p {
-    margin: 10px 80px;
-    padding: 15px 5px;
-    border: 5px black solid;
-    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
-    
-}
-
-.HTML_explaining{
-    color: white;
-    background-color: black;
-    text-align: center;
-    border: 5px black solid;
-    border-radius: 150px;
-    margin: 10px 720px;
-    padding: 10px;
-    text-decoration: underline 2px;
-    text-underline-offset: 10px;
-    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
-}
-
-.CodeHTML{
-    border: 5px black solid;
-    margin: 10px 80px;
-}
-
-.Main_text{
-    text-decoration: underline 3px;
-    text-underline-offset: 5px;
+.text.child {
+    color: rgb(0, 0, 0);
+    font-weight: 800;
+    font-size: 14px;
 }
